<resources>
    <string name="app_name">Kang Vinyl</string>
    <!-- Menu strings -->
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="deeplink">Deep Link</string>
    <string name="add_vinyl_menu">Add Vinyl</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="collection">My Collection</string>
    <string name="chat">Chat</string>

    <!-- Input strings -->
    <string name="vinyl_name">Vinyl Title</string>
    <string name="vinyl_desc">About the Record</string>
    <string name="vinyl_artist">Artist</string>
    <string name="select_vinyl_image">Select A Vinyl Image</string>
    <string name="vinyl_genre">Select Genre</string>
    <string name="user_name">User Name</string>
    <string name="user_password">Password</string>
    <string name="user_email">Email</string>
    <string name="user_bio">Bio</string>
    <string name="user_fav_genre">Favorite Genre</string>
    <string name="message">Message</string>

    <!-- Button strings -->
    <string name="add_vinyl">Add Vinyl</string>
    <string name="add_image">Set an Image</string>
    <string name="view_kang">View all Kang</string>
    <string name="return_kang">Return to Kang</string>
    <string name="more_info">Read More</string>
    <string name="delete_button">Delete Vinyl</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="logout_button">Logout</string>
    <string name="stay_button">Stay</string>
    <string name="accept_user_button">Accept Details</string>
    <string name="set_profile_image">Set Profile Image</string>
    <string name="update_profile_image">Update Profile Image</string>
    <string name="set_dob">Set Date of Birth</string>
    <string name="add_fav">Add to Collection</string>
    <string name="del_fav">Remove from Collection</string>
    <string name="del_user">Delete Profile</string>
    <string name="share">Share Record</string>
    <string name="google_sign">Sign In With Google</string>

    <!-- Screen strings -->
    <string name="vinyl_list">My Vinyl</string>
    <string name="deep_link_instructions">Type your deep link args</string>
    <string name="settings_fragment_text">Settings Fragment Under Construction</string>
    <string name="navigate_destination_button">Navigate to destination</string>
    <string name="navigate_action_button">Navigate with action</string>
    <string name="next_step_button">Navigate next step</string>
    <string name="finish_button">Finish Flow</string>
    <string name="send_deep_link_notification_button">Send deep link notification</string>
    <string name="welcome">Welcome to a Mobile Kang DataBase</string>
    <string name="thankyou">Thank you for your Contribution</string>
    <string name="norecord">Aww dawg, there is no records for this genre, but don\'t trip, feel free to add a vinyl</string>
    <string name="notuser">Not a user, Sign Up</string>
    <string name="auser">Already a user, Log In</string>
    <string name="logout_msg">Are you sure you want to log out?</string>
    <string name="danger_msg">Danger Zone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
