<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:startDestination="@+id/vinylProfileFragment"
        >
    <fragment
            android:id="@+id/vinylProfileFragment"
            android:name="org.ciaranroche.kang.fragments.HomeFragment"
            android:label="Kang"
            tools:layout="@layout/fragment_vinyl_list">
        <action
                android:id="@+id/action_vinylProfileFragment_to_add_vinyl"
                app:destination="@id/add_vinyl"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
            android:id="@+id/add_vinyl"
            android:name="org.ciaranroche.kang.fragments.AddVinylFragment"
            android:label="@string/add_vinyl"
            tools:layout="@layout/add_vinyl_fragment">
        <argument
                android:name="flowStepNumber"
                app:argType="integer"
                android:defaultValue="1"/>

        <action
                android:id="@+id/next_action"
                app:destination="@+id/flow_step_two_dest"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
            android:id="@+id/flow_step_two_dest"
            android:label="@string/add_vinyl"
            android:name="org.ciaranroche.kang.fragments.AddVinylFragment"
            tools:layout="@layout/add_vinyl_two_fragment">

        <argument
                android:name="flowStepNumber"
                app:argType="integer"
                android:defaultValue="2"/>

        <action
                android:id="@+id/next_action"
                app:popUpTo="@id/vinylProfileFragment">
        </action>
    </fragment>

    <fragment
            android:id="@+id/settings_dest"
            android:name="org.ciaranroche.kang.fragments.SettingsFragment"
            android:label="@string/settings"
            tools:layout="@layout/settings_fragment" />


    <fragment
            android:id="@+id/deeplink_dest"
            android:name="org.ciaranroche.kang.fragments.DeepLinkFragment"
            android:label="@string/deeplink"
            tools:layout="@layout/deeplink_fragment">

        <argument
                android:name="myarg"
                android:defaultValue="Android!"/>

        <deepLink app:uri="www.example.com/{myarg}" />
    </fragment>
</navigation>