<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.main.LogOutFragment"
                                                   android:id="@+id/frameLayout4"
                                                   android:background="@color/colorPrimaryDark">


    <TextView
            android:text="@string/logout_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/colorAccent"
            app:layout_constraintVertical_bias="0.44"
            android:textSize="18sp"/>

    <Button
            android:text="@string/logout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/logoutBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/stayBtn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginStart="8dp"
            android:theme="@style/Butt"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="4dp"/>

    <Button
            android:text="@string/stay_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/stayBtn"
            app:layout_constraintStart_toEndOf="@+id/logoutBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginEnd="8dp"
            android:theme="@style/Butt"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>