<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.ciaranroche.kang.fragments.main.SettingsFragment"
        android:background="@color/colorPrimaryDark">

    <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputStartUp"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textInputLayout5">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:id="@+id/set_username"
                android:textColor="@color/colorLight"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputStartUp"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            android:id="@+id/textInputLayout11">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_bio"
                android:id="@+id/set_bio"
                android:textColor="@color/colorLight"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
            android:id="@+id/genres_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>

    <View
            android:id="@+id/divider8"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/genres_spinner"/>

    <TextView
            android:text="@string/user_fav_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout11"
            android:textColor="@color/colorAccent"/>

    <Button
            android:text="@string/set_profile_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/image_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider8"
            android:theme="@style/Butt"
            android:textColor="@color/colorAccent"/>

    <View
            android:id="@+id/divider9"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/image_button"/>

    <Button
            android:text="@string/accept_user_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/accept_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider9"
            android:theme="@style/Butt"
            android:textColor="@color/colorAccent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
