<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ciaranroche.kang.fragments.FlowStepFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <Button
                android:text="@string/add_vinyl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/next_button" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textInputLayout2" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                android:hint="@string/vinyl_desc">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vinyl_desc_input"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/textInputLayout3"
                android:hint="@string/vinyl_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vinyl_name_input"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>